--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,8 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   ANSI CLI module from the Python system utilities package AutoSys.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: skeptycal
+github_username:  skeptycal
 
 # Build settings
 theme: minima
