--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,19 @@
+include .coveragerc
+include .gitignore
+include CHANGES.yml
+include CODE_OF_CONDUCT.md
+include docs/
+include images/
 include LICENSE
+include Michael_Treanor_public_key.asc
 include poetry.lock
 include pyproject.toml
+include pytest.ini
 include README.md
+include README.rst
 include setup.cfg
 include setup.py
 include setup.sh
-
+include tests/
+include tox.ini
+include toxcov.ini
