--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,21 @@
-[wheel]
-universal=1
-
 [bdist_wheel]
 universal=1
 
 [metadata]
-license_files =
-  LICENSE
+license_files = LICENSE
 
+[aliases]
+test=pytest
+
+[flake8]
+extend-ignore = E203, W503
+max-line-length = 79
+
+[isort]
+combine_as_imports = True
+include_trailing_comma = True
+line_length = 88
+multi_line_output = 3
+
+[tool:pytest]
+addopts = -rs
