--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+docopt = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 poetry = "^1.0.2"
